# active-lite

./: .tgitconfig  CMakeLists.txt  README.md
.github/workflows/: ci.yml
example/: CMakeLists.txt  main-count.cpp  main-queue.cpp
include/nonstd/: active.hpp
project/VisualStudioCode/: active-lite.code-workspace
script/: update-version.py
